--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=*********
+spring.datasource.password=02122013margo
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -9,3 +9,6 @@ logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
 logging.level.com.example.lab3=DEBUG
 spring.mvc.static-path-pattern=/static/**
+sunrise-sunset.latitude=54.3000
+sunrise-sunset.longitude=30.2400
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
